# learning-media-foundation

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  azure-pipelines.yml  packages.config  readme.md  sonar-project.properties
cmake/: winml_cppwinrt.cmake
scripts/: create-coverage-xml.ps1  download_mp4.ps1
test/: MessageHolder.idl  WinRTComponent.MessageHolder.cpp  WinRTComponent.MessageHolder.h  dllmain.cpp  media.idl  mf_transform.cpp  mf_transform.hpp  string.cpp  test_dxva.cpp  test_main.cpp  test_mf_threading.cpp  test_mf_transform.cpp
